[project]
name = "rl"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "shuma-fukuba", email = "calculus.fukuba@gmail.com" }
]
dependencies = [
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "matplotlib>=3.7.5",
    "scipy>=1.10.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "rl:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rl"]
